Fix dark mode link contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -64,6 +64,11 @@ h2 {
   box-shadow: 0 0 1rem #414141;
 }
 
+.card a {
+  text-decoration: underline;
+  color: #2f6690;
+}
+
 h3 {
   margin: 0;
 }
